[project]
name = "inventory-agent"
version = "0.1.0"
description = "Inventory Forecasting Agent"
requires-python = ">=3.11,<3.15"

dependencies = [
    "google-adk>=2.0.0a0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.34.0",
    "pydantic-settings>=2.0.0",
    "google-genai>=0.4.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

